--- a/advent/assets/css/phoenix.css
+++ b/advent/assets/css/phoenix.css
@@ -75,9 +75,11 @@ header nav ul,
 header nav li {
   margin: 0;
   padding: 0;
-  display: block;
+  display: flex;
   text-align: right;
   white-space: nowrap;
+  flex-direction: row;
+  padding-left: 10px
 }
 header nav ul {
   margin: 1rem;
