--- a/advent/lib/advent_web/templates/solutions/index.html.heex
+++ b/advent/lib/advent_web/templates/solutions/index.html.heex
@@ -14,7 +14,21 @@
 
 <section class="">
   <h1>Part One:</h1>
-  <p><%= @part_one %></p>
+  <%= @count %>
+  <p>
+    <%= for row <- @grid do %>
+      <p>
+      <%= for cell <- row do %>
+        <%= if cell == "X" do %>
+          <span style="color:red; font-weight:bold;">X</span>
+        <%= else %>
+          <span style="color:black; font-weight:bold;">X</span>
+        <%= end %>
+      <%= end %>
+      </p>
+    <%= end %>
+
+  </p>
 
   <h1>Part Two:</h1>
   <p><%= @part_two %></p>
