--- a/advent/lib/advent_web/templates/solutions/index.html.heex
+++ b/advent/lib/advent_web/templates/solutions/index.html.heex
@@ -15,7 +15,7 @@
 <section class="">
   <h1>Part One:</h1>
   <%= @count %>
-  <p>
+  <p class="hey">
     <%= for row <- @grid do %>
       <p>
       <%= for cell <- row do %>
