day 10 part 2 done and cleaned; day 11 compiles

--- a/advent/lib/advent_web/templates/solutions/day_10.html.heex
+++ b/advent/lib/advent_web/templates/solutions/day_10.html.heex
@@ -18,11 +18,13 @@
 
   <h1>Part Two:</h1>
 
+  <table>
   <%= for row <- @part_two do %>
-    <p>
-      <%= for pixel <- row do %>
-        <span><%= "#{pixel}" %> </span>
-      <%= end %>
-    </p>
+    <tr>
+    <%= for pixel <- row do %>
+        <td><%= "#{pixel}" %> </td>
+    <%= end %>
+    </tr>
   <%= end  %>
+  </table>
 </section>
